--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -953,8 +953,10 @@ strong {
   align-items: center;
   //margin-right: 15%;
   //margin-top: 30px;
-  margin: 5px 0 5px 0;
+  //margin: 5px 0 5px 0;
+  margin: 35px 0 5px 0;
   padding-bottom: 5px;
+
   @media (min-width: 800px) {
     margin: 10px 0 10px 0;
   }
@@ -1827,4 +1829,35 @@ button:hover{
   //overflow: auto;
   //height: 380px;
   //overflow-y: hidden;
+}
+
+.contenedor-slider-1{
+  position: relative;
+  width: 100%;
+}
+.contenedor-slider-2{
+  margin: 0 20px 100px;
+  @media (min-width: 800px) {
+    margin: 0 18%;
+  }
+}
+.contenedor-slider-3{
+  min-height: 270px;
+}
+.contenedor-slider-6 {
+ // position: absolute;
+  //opacity: 1!important;
+  //z-index: 1!important;
+
+  display: inline!important;
+}
+
+.contenedor-slider-7 {
+  //position: absolute;
+  //opacity: 0;
+  //z-index: 0;
+  display: none;
+}
+.slider-alto{
+  min-height: 320px;
 }
