--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -66,7 +66,6 @@ html {
 
 .color-primary {
   color: white;
-  text-align: center;
 }
 
 .color-terciary {
@@ -717,9 +716,9 @@ h3 {
   animation:fadeIn ease-in 1;
   -moz-animation-fill-mode:forwards;
   animation-fill-mode:forwards;
-  -webkit-animation-duration:2s;
-  -moz-animation-duration:2s;
-  animation-duration:2s;
+  -webkit-animation-duration:1s;
+  -moz-animation-duration:1s;
+  animation-duration:1s;
   @media (max-width: 600px){
     text-justify: inter-word;
     //font-size: 25px;
@@ -1849,6 +1848,16 @@ button:hover{
 }
 .slider-alto{
   min-height: 320px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 17px;
+  -webkit-animation:fadeIn ease-in-out 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation:fadeIn ease-in-out 1;
+  animation:fadeIn ease-in-out 1;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+  -webkit-animation-duration:1.5s;
+  -moz-animation-duration:1.5s;
+  animation-duration:1.5s;
 }
 
 select{
