--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -957,7 +957,7 @@ strong {
   padding-bottom: 5px;
 
   @media (min-width: 800px) {
-    margin: 10px 0 10px 0;
+    margin: 40px 0 40px 0;
   }
 }
 
@@ -985,7 +985,14 @@ strong {
 }
 
 .back > a:hover, .btn-action > a:hover {
-  color: $color_2;
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
 }
 
 input[type="text"],
@@ -1080,7 +1087,7 @@ border-radius: 20px;
 .show-noticia-foto {
   margin: 30px 0 20px;
   //height: 400px;
-  min-height: 180px;
+  min-height: 175px;
   width: 100%;
   overflow: hidden;
   border: 4px solid $color_6;
@@ -1094,7 +1101,7 @@ border-radius: 20px;
   width: 100%;
   text-align: center;
   @media (min-width: 800px) {
-    width: 150px;
+    width: 153px;
   }
 }
 
@@ -1601,12 +1608,20 @@ label {
 button {
   font-family: 'Oswald', sans-serif;
   border: none;
+  font-size: 14px;
   background-color: transparent;
   font-weight: bold;
   cursor: pointer;
 }
 button:hover{
-  color:$color_2;
+  color: white;
+  cursor: pointer;
+  text-decoration: underline;
+  -webkit-transition: all .3s;
+  -moz-transition: all .3s;
+  -ms-transition: all .3s;
+  -o-transition: all .3s;
+  transition: all .3s;
 }
 .ac-mensaje-custom-show{
   background-color: $color_4;
@@ -1664,13 +1679,13 @@ button:hover{
 .arrow-contacto-margin{
   margin-right:0;
   @media (min-width: 800px) {
-    margin-right:10px;
+    margin-right:8px;
   }
 }
 .arrow-chat-margin{
   margin-right:0;
   @media (min-width: 800px) {
-    margin-right:10px;
+    margin-right:15px;
   }
 }
 .controls-margin{
@@ -1774,6 +1789,8 @@ button:hover{
   @media (min-width: 800px) {
     width: 50px;
     border-radius: 5px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 
   }
 }
